# pattssun

./: .env.example  .gitignore  CLAUDE.md  README.md  move-bookmarks.sh  pyproject.toml
extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/pattssun/: cli.py  config.py  models.py
src/pattssun/prompts/: scriptwriter.md
src/pattssun/steps/: fetch_bookmarks.py  generate_scripts.py  migrate_bookmarks.py
