[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattssun"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
pattssun = "pattssun.cli:app"
